[package]
name = "hsmq"
version = "0.1.0"
edition = "2021"
default-run = "hsmq"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.8.1", features = ["ws", "http2"] }
base64 = "0.22.1"
clap = { version = "4.5.21", features = ["derive"] }
console-subscriber = { version = "0.4.1", optional = true }
consulrs = { version = "0.1.0", optional = true }
futures = "0.3.31"
gethostname = "1.0.1"
h2 = "0.4.7"
http = "1.1.0"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
log = "0.4.21"
opentelemetry = "0.29.0"
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
prometheus = { version = "0.13.3", features = ["process"] }
prost = "0.13.3"
prost-types = "0.13.3"
rand = "0.9.0"
redis = { version = "0.29.2", optional = true }
sentry = { version = "0.37.0", optional = true }
sentry-tracing = { version = "0.37.0", optional = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133", features = ["raw_value"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "signal", "tracing"] }
tokio-stream = { version = "0.1.16", features = ["net"] }
tokio-util = { version = "0.7.12", features = ["rt", "time"] }
toml = "0.8.19"
tonic = "0.13.0"
tonic-health = "0.13.0"
tracing = "0.1.41"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = "0.3.19"
vaultrs = { version = "0.7.3", optional = true }
uuid = { version = "1.11.0", features = ["v4", "v7"] }

[dev-dependencies]
axum-test = "17.2.0"
bytes = "1.8.0"
http-body = "1.0.1"

[build-dependencies]
tonic-build = "0.13.0"

[features]
default = [
    "redis",
    "redis-cluster",
    "redis-stream-order-atomic",
]
console = ["dep:console-subscriber"]
sentry = ["sentry/tokio", "dep:sentry-tracing"]
vault = ["dep:vaultrs"]
consul = ["dep:consulrs"]
redis = ["redis/tokio-comp"]
redis-cluster = ["redis/cluster-async"]
redis-stream-order-atomic = []
